# cmake-labs

./: .gitignore  .gitmodules  README.md
00_SetupPractice/: README.md
01_HelloWorld/: CMakeLists.txt  README.md
02_BasicProject/: CMakeLists.txt
03_IntermediateProject/: README.md
03_IntermediateProject/app/: CMakeLists.txt
03_IntermediateProject/src/my_lib/: CMakeLists.txt
04_VariablesAndOptions/: CMakeLists.txt  README.md
04_VariablesAndOptions/app/: CMakeLists.txt  main.cc
04_VariablesAndOptions/src/my_lib/: CMakeLists.txt  my_lib.cc
05_ConfigureFile/: CMakeLists.txt
05_ConfigureFile/app/: main.cc
05_ConfigureFile/configured/: config.hpp.in
05_ConfigureFile/src/my_lib/: CMakeLists.txt
06_SourcesAndHeaders/: CMakeLists.txt
06_SourcesAndHeaders/app/: CMakeLists.txt  main.cc
06_SourcesAndHeaders/src/my_lib/: my_lib.cc
07_ExternalGit/: CMakeLists.txt  README.md
07_ExternalGit/app/: CMakeLists.txt  main.cc
07_ExternalGit/cmake/: AddGitSubmodule.cmake
07_ExternalGit/configured/: config.hpp.in
07_ExternalGit/src/my_lib/: CMakeLists.txt
